--- a/shopping-site/templates/cart.html
+++ b/shopping-site/templates/cart.html
@@ -2,46 +2,32 @@
 {% extends 'base.html' %}
 
 {% block body %}
-
+   
     <table class="table table-striped mt-3">
         <thead>
-        <tr>
-            <th>Melon Name</th>
-            <th>Quantity</th>
-            <th>Price</th>
-            <th>Total</th>
-        </tr>
+            <tr>
+                <th>Melon Name</th>
+                <th>Quantity</th>
+                <th>Price</th>
+                <th>Total</th>
+            </tr>
         </thead>
         <tbody>
-        <tr>
-            <td>Ancient Watermelon</td>
-            <td>5</td>
-            <td>$3.00</td>
-            <td>$15.00</td>
-        </tr>
-        <tr>
-            <td>Charleston Gray</td>
-            <td>2</td>
-            <td>$2.00</td>
-            <td>$4.00</td>
-        </tr>
-        <tr>
-            <td>Crenshaw</td>
-            <td>1</td>
-            <td>$2.00</td>
-            <td>$2.00</td>
-        </tr>
-        <tr>
-            <td>Ledmon Watermelon</td>
-            <td>2</td>
-            <td>$3.00</td>
-            <td>$6.00</td>
-        </tr>
+            {% for melon in melons_in_cart %}
+                <tr>
+                    <td> {{ melon[0] }} </td>
+                    <td> {{ melon[1] }} </td>
+                    <td> ${{ "%.2f"|format(melon[2]) }} </td>
+                    <td> ${{ "%.2f"|format(melon[3]) }} </td>
+                </tr>
+            {% endfor %}
         </tbody>
     </table>
 
-    <h3>Total: $27.00</h3>
 
-    <a href="/checkout" class="btn btn-large btn-primary">Check Out</a>
+    <h3>Total: ${{ "%.2f"|format(total) }}</h3>
+
+    <!-- redirect to cart for final version-->
+    <a href="/melons" class="btn btn-large btn-primary">back to melons (for now)</a>
 
 {% endblock %}
