--- a/apis/templates/event-details.html
+++ b/apis/templates/event-details.html
@@ -25,7 +25,7 @@
           TODO: Replace EVENT TICKETMASTER URL with URL to event's
           Ticketmaster page
         #}
-        <a href="EVENT TICKETMASTER URL" target="_blank">
+        <a href={{ url }} target="_blank">
           Go to Ticketmaster page
         </a>
       </p>
