--- a/apis/templates/event-details.html
+++ b/apis/templates/event-details.html
@@ -1,30 +1,20 @@
 {% extends 'base.html' %}
 
-{# TODO: Replace EVENT NAME with the event's name #}
 {% block title %}Event Details | EVENT NAME{% endblock %}
 
 {% block content %}
 <div class="container">
   <div class="row">
     <div class="col">
-      {# TODO: Replace EVENT NAME with the event's name #}
       <h2>{{ event_name }}</h2>
     </div>
   </div>
 
   <div class="row">
     <div class="col col-md-4">
-      {#
-        TODO: Replace EVENT IMAGE URL with actual URL to one of the
-        event images
-      #}
-      <img src="EVENT IMAGE URL">
+      <img src={{ image_url }}>
 
       <p>
-        {#
-          TODO: Replace EVENT TICKETMASTER URL with URL to event's
-          Ticketmaster page
-        #}
         <a href={{ url }} target="_blank">
           Go to Ticketmaster page
         </a>
@@ -33,28 +23,15 @@
 
     <div class="col">
       <h3>Start date</h3>
-      {# TODO: Replace EVENT START DATE with event's start date #}
       <p>{{ start_date }}</p>
 
       <h3>Venues</h3>
       <ul>
-        {#
-          TODO: Remove placeholder <li> tag & loop over all event venues to
-          generate an `li` element for each venue.
-
-          Each `li` should contain the name of a venue.
-        #}
         <li>{{ venue }}</li>
       </ul>
 
       <h3>Classifications</h3>
       <ul>
-        {#
-          TODO: Remove placeholder <li> tag & loop over all event
-          classifications to generate an `li` element for each classification.
-
-          Each `li` should contain the name of the classification's *genre*.
-        #}
         <li>{{ classification }}</li>
       </ul>
     </div>
