--- a/apis/templates/event-details.html
+++ b/apis/templates/event-details.html
@@ -15,9 +15,7 @@
       <img src={{ image_url }}>
 
       <p>
-        <a href={{ url }} target="_blank">
-          Go to Ticketmaster page
-        </a>
+        <a href={{ url }} target="_blank">Go to Ticketmaster page</a>
       </p>
     </div>
 
