--- a/js-sharkwords-ui/templates/sharkwords.html
+++ b/js-sharkwords-ui/templates/sharkwords.html
@@ -15,6 +15,12 @@
       The shark got you! Click here to play again.
     </a>
 
+    <a id="win" style="display: none;">
+      Congratulations! 🥳 You won!
+    </a>
+
+
+
     <section id="word-container"></section>
 
     <section id="letter-buttons"></section>
