--- a/ratings-v2/templates/base.html
+++ b/ratings-v2/templates/base.html
@@ -9,7 +9,16 @@
 
     {% block head %}{% endblock %}
   </head>
+
   <body>
+    {% block nav %}
+      Logged in as: {{ session['user'] }}
+    {% endblock %}
+
+    {% for msg in get_flashed_messages() %}
+      <p class = "flash-msg"> {{ msg }} </p>
+    {% endfor %}
+
     {% block body %}{% endblock %}
 
     {% block after_body %}{% endblock %}
